testing speed settings for Bones, added config section for fish-specific settings

--- a/BillyPython/billy.ini
+++ b/BillyPython/billy.ini
@@ -10,3 +10,12 @@ pw: bass
 testing: true
 polling_interval: 500
 polling_interval_testing: 5000
+
+[BILLY]
+# these numbers will vary by fish
+# use the two test files to find the relevant settings
+# frequency is the same for all motors
+frequency: 100
+head_speed: 175
+mouth_speed: 100
+waggle_the_tail: false
