added some config settings, streamlining some code

--- a/BillyPython/billy.ini
+++ b/BillyPython/billy.ini
@@ -15,7 +15,10 @@ polling_interval_testing: 5000
 # these numbers will vary by fish
 # use the two test files to find the relevant settings
 # frequency is the same for all motors
-frequency: 100
-head_speed: 175
-mouth_speed: 100
+frequency: 90
+head_speed: 125
+mouth_speed: 60
 waggle_the_tail: false
+move_the_head: false
+# milliseconds to wait before moving the mouth at the start
+offset: 200
