using alternate approach for lip sync, full working version

--- a/BillyPython/billy.ini
+++ b/BillyPython/billy.ini
@@ -17,8 +17,9 @@ polling_interval_testing: 5000
 # frequency is the same for all motors
 frequency: 90
 head_speed: 125
-mouth_speed: 60
+mouth_speed: 95
 waggle_the_tail: false
 move_the_head: false
 # milliseconds to wait before moving the mouth at the start
-offset: 200
+offset: 325
+mouth_duration: 8
