added config area for 2nd billy fish

--- a/BillyPython/billy.ini
+++ b/BillyPython/billy.ini
@@ -10,8 +10,9 @@ pw: bass
 testing: true
 polling_interval: 500
 polling_interval_testing: 2500
+use: billy2
 
-[BILLY]
+[BILLY1]
 # these numbers will vary by fish
 # use the two test files to find the relevant settings
 # frequency is the same for all motors
@@ -22,4 +23,24 @@ waggle_the_tail: false
 move_the_head: false
 # milliseconds to wait before moving the mouth at the start
 offset: 325
-mouth_duration: 8
+mouth_duration: 10
+# fish orange to bread brown
+# fish brown to bread orange
+# bread orange to hat brown (motor 1, right)
+# bread black to hat black (motor 1, left)
+
+[BILLY2]
+# these numbers will vary by fish
+# use the two test files to find the relevant settings
+# frequency is the same for all motors
+frequency: 150
+head_speed: 125
+mouth_speed: 125
+waggle_the_tail: false
+move_the_head: false
+# milliseconds to wait before moving the mouth at the start
+offset: 325
+mouth_duration: 12
+# body: orange fish to brown breadboard = left on motor 1 on hat
+# mouth: greay fish to red on breadboard, see picture 20180717 = left on motor 2 hat
+
