small edit to config file, added comments

--- a/BillyPython/billy.ini
+++ b/BillyPython/billy.ini
@@ -8,6 +8,8 @@ pw: bass
 
 [APP]
 testing: true
+# plling interval determines how fast the script will loop and check FMS
+# milliseconds
 polling_interval: 500
 polling_interval_testing: 2500
 use: billy2
