--- a/BillyPython/billy.ini
+++ b/BillyPython/billy.ini
@@ -13,8 +13,19 @@ testing: true
 polling_interval: 500
 polling_interval_testing: 2500
 use: billy2
-volume: 10
+volume: 5
+# Find PA_SOURCE with `pactl list` and look for a monitor device that corresponds
+# to your output device.
+# My Pi has only one that has monitor in its name:
+# Source #0
+# alsa_output.platform-soc_audio.analog-stereo.monitor
+#
+#-->> may need to change this when plugging in USB audio or using the separate amplifier!
+#
+# other way to get monitors:
+# pacmd list | grep ".monitor"
 audio_source: alsa_output.platform-soc_audio.analog-stereo.monitor
+sample_threshold: 4
 
 [BILLY1]
 # these numbers will vary by fish
