modified the popen calls to pacat, still no output yet

--- a/BillyPython/billy.ini
+++ b/BillyPython/billy.ini
@@ -28,6 +28,7 @@ audio_source: alsa_output.platform-soc_audio.analog-stereo.monitor
 sample_threshold: 4
 
 [BILLY1]
+# this is the good fish
 # these numbers will vary by fish
 # use the two test files to find the relevant settings
 # frequency is the same for all motors
@@ -45,6 +46,7 @@ mouth_duration: 10
 # bread black to hat black (motor 1, left)
 
 [BILLY2]
+# slightly worse-for-wear fish
 # these numbers will vary by fish
 # use the two test files to find the relevant settings
 # frequency is the same for all motors
