removed unused code, added omxplayer option for usb card

--- a/BillyPython/billy.ini
+++ b/BillyPython/billy.ini
@@ -14,18 +14,7 @@ polling_interval: 500
 polling_interval_testing: 2500
 use: billy2
 volume: 5
-# Find PA_SOURCE with `pactl list` and look for a monitor device that corresponds
-# to your output device.
-# My Pi has only one that has monitor in its name:
-# Source #0
-# alsa_output.platform-soc_audio.analog-stereo.monitor
-#
-#-->> may need to change this when plugging in USB audio or using the separate amplifier!
-#
-# other way to get monitors:
-# pacmd list | grep ".monitor"
-audio_source: alsa_output.platform-soc_audio.analog-stereo.monitor
-sample_threshold: 4
+# only move mouth when amplitude is over this level
 audio_amplitude_threshold: 6000
 
 [BILLY1]
