added config setting to use USB audio

--- a/BillyPython/billy.ini
+++ b/BillyPython/billy.ini
@@ -16,6 +16,7 @@ use: billy2
 volume: 5
 # only move mouth when amplitude is over this level
 audio_amplitude_threshold: 6000
+audio_use_USB: true
 
 [BILLY1]
 # this is the good fish
