rearranged the config settings

--- a/BillyPython/billy.ini
+++ b/BillyPython/billy.ini
@@ -7,12 +7,15 @@ user: billy
 pw: bass
 
 [APP]
+# what fish to use:
+use: billy2
+# testing mode?  longer delay between loop iterations, checking for FM records while in testing mode
 testing: true
 # plling interval determines how fast the script will loop and check FMS
 # milliseconds
 polling_interval: 500
 polling_interval_testing: 2500
-use: billy2
+# volume is not working
 volume: 5
 # only move mouth when amplitude is over this level
 audio_amplitude_threshold: 6000
