remove old code, cleanup for only pacat code

--- a/BillyPython/billy.ini
+++ b/BillyPython/billy.ini
@@ -7,26 +7,24 @@ user: billy
 pw: bass
 
 [APP]
-testing: true
+# what fish to use:
+use: billy2
 # plling interval determines how fast the script will loop and check FMS
 # milliseconds
 polling_interval: 500
 polling_interval_testing: 2500
-use: billy2
+testing: true
+# volume does not work
 volume: 5
 # Find PA_SOURCE with `pactl list` and look for a monitor device that corresponds
 # to your output device.
-# My Pi has only one that has monitor in its name:
-# Source #0
-# alsa_output.platform-soc_audio.analog-stereo.monitor
-#
-#-->> may need to change this when plugging in USB audio or using the separate amplifier!
-#
 # other way to get monitors:
 # pacmd list | grep ".monitor"
 audio_source: alsa_output.platform-soc_audio.analog-stereo.monitor
+audio_source_USB: alsa_output.usb-C-Media_Electronics_Inc._USB_Audio_Device-00.analog-stereo.monitor
 sample_threshold: 4
 audio_amplitude_threshold: 4000
+audio_use_USB: true
 
 [BILLY1]
 # this is the good fish
