added also monitor for CreateLab SoundBlaster Play3 to ini

--- a/BillyPython/billy.ini
+++ b/BillyPython/billy.ini
@@ -21,7 +21,10 @@ volume: 5
 # other way to get monitors:
 # pacmd list | grep ".monitor"
 audio_source: alsa_output.platform-soc_audio.analog-stereo.monitor
-audio_source_USB: alsa_output.usb-C-Media_Electronics_Inc._USB_Audio_Device-00.analog-stereo.monitor
+# for C-media usb device:
+# audio_source_USB: alsa_output.usb-C-Media_Electronics_Inc._USB_Audio_Device-00.analog-stereo.monitor
+# for Create Lab SoundBlaster Play 3
+audio_source_USB: alsa_output.usb-Creative_Technology_Ltd_Sound_Blaster_Play__3_00016211-00.analog-stereo.monitor
 sample_threshold: 4
 audio_amplitude_threshold: 4000
 audio_use_USB: true
