tweak to the INI file, note about the volume

--- a/BillyPython/billy.ini
+++ b/BillyPython/billy.ini
@@ -14,7 +14,7 @@ use: billy2
 polling_interval: 500
 polling_interval_testing: 2500
 testing: true
-# volume does not work
+# volume does not work, set volume with alsamixer from the command line
 volume: 5
 # Find PA_SOURCE with `pactl list` and look for a monitor device that corresponds
 # to your output device.
