print the usb audio option

--- a/BillyPython/billy.ini
+++ b/BillyPython/billy.ini
@@ -15,7 +15,7 @@ testing: true
 # milliseconds
 polling_interval: 500
 polling_interval_testing: 2500
-# volume is not working
+# volume is not working, use alsamixer on the pi itself to set volume
 volume: 5
 # only move mouth when amplitude is over this level
 audio_amplitude_threshold: 6000
